# TensorRT-Base

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  README.md  base_trt.cpp  base_trt.h  helper.cpp  helper.h  int8_calibrator.cpp  int8_calibrator.h  logger.h  timer.h  trt_return_type.h
faster_rcnn/: CMakeLists.txt  README.md  faster_rcnn.cpp  faster_rcnn.h  main_faster_rcnn.cpp
faster_rcnn/plugin/: plugin_faster_rcnn.h
lib/: README.md
mnist_caffe/: CMakeLists.txt  README.md  main_mnist_caffe.cpp  mnist_caffe.cpp  mnist_caffe.h
mnist_onnx/: CMakeLists.txt  README.md  main_mnist_onnx.cpp  mnist_onnx.cpp  mnist_onnx.h
mnist_onnx/model/: modified.onnx
plugin/: CMakeLists.txt  README.md  plugin_factory.cpp  plugin_factory.h
plugin/NMS_V3/: NMS_V3.cpp  NMS_V3.h
plugin/demo_plugin/: demo_plugin.cpp  demo_plugin.h
